--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: blog
 title: Home
 description: >
-  Christian Haller - Personal Website. Building digital eminence for geoscience.
+  Yinuo Wang - Personal Website..
 ---
